volunteer-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-volunteer-service
  name: app-volunteer-service
  namespace: volunteer-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: app-volunteer-service
  template:
    metadata:
      labels:
        app: app-volunteer-service
    spec:
      containers:
        - name: app-volunteer-service
          image: 051688400625.dkr.ecr.us-east-1.amazonaws.com/solidarytech_volunteer-service:b878cd7071f7c461a483bb08a49603864b29a7e6
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          startupProbe:
            httpGet:
              path: /health
              port: 8083
            failureThreshold: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
