volunteer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-volunteer-service
  namespace: volunteer-service
spec:
  selector:
    app: app-volunteer-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
  type: ClusterIP
